Closed
Bug 619339
Opened 15 years ago
Closed 15 years ago
TypeInference: Assertion failure: op == JSOP_DIV && type == JSVAL_TYPE_INT32
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
(Whiteboard: fixed-in-jaegermonkey)
This test case:
--
var a;
assertEq(true && 1.1 + a, NaN);
--
Asserts with ./js -m:
Assertion failure: op == JSOP_DIV && type == JSVAL_TYPE_INT32, at ../methodjit/FastArithmetic.cpp:402
Updated•15 years ago
|
Comment 1•15 years ago
|
||
Bogus assert. Inference can mark the result of 'double + ?' as a bool or other type if the '?' type set is empty (we don't want to preemptively mark the result as a double, as the '?' could be a string), which confused JM.
http://hg.mozilla.org/projects/jaegermonkey/rev/fce4c50e6f49
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•