[INFER] Avoid bogus assert when compiling a binary op that must be recompiled, bug 619339.